landing page complete

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-        <title>Document 1</title>
+        <title>The Sonny Co</title>
 
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,11 @@
 
         {{ content }}
 
-        <footer class="px-5p my-5p md:flex grid grid-cols-2 gap-8 uppercase text-sm">
+        <footer class="py-5">
+            <p class="text-center">Copyright 2023</p>
+        </footer>
+
+        <!-- <footer class="px-5p my-5p md:flex grid grid-cols-2 gap-8 uppercase text-sm">
             <div class="">
                 <p>Lorem Ipsum</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore ducimus dolores.</p>
@@ -33,6 +37,6 @@
                 <input type="email" id="email" name="email" required class="text-black border border-black w-full mt-3">
                 <button type="submit" class="block ml-auto border text-white bg-black border-black hover:text-black hover:bg-white hover:border-black transition px-4 py-1 tracking-widest uppercase">Subscribe</button>
             </div>
-        </footer>
+        </footer> -->
     </body>
 </html>
