--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,6 +442,9 @@ video {
 .inline-block {
   display: inline-block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -450,6 +453,12 @@ video {
 }
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+.max-h-\[70vh\] {
+  max-height: 70vh;
+}
+.max-h-\[50vh\] {
+  max-height: 50vh;
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
@@ -460,8 +469,14 @@ video {
 .w-full {
   width: 100%;
 }
-.max-w-\[30\%\] {
-  max-width: 30%;
+.min-w-\[\] {
+  min-width: ;
+}
+.min-w-\[50vw\] {
+  min-width: 50vw;
+}
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 .max-w-4xl {
   max-width: 56rem;
@@ -472,11 +487,8 @@ video {
 .max-w-50 {
   max-width: 50%;
 }
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-.max-w-\[400px\] {
-  max-width: 400px;
+.max-w-2xl {
+  max-width: 42rem;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -499,11 +511,17 @@ video {
 .items-center {
   align-items: center;
 }
+.justify-end {
+  justify-content: flex-end;
+}
 .justify-center {
   justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
 }
 .gap-8 {
   gap: 2rem;
@@ -574,8 +592,31 @@ video {
 .bg-\[url\(\'\/assets\/images\/minimal-5\.jpg\'\)\] {
   background-image: url('/assets/images/minimal-5.jpg');
 }
+.bg-\[url\(\'\/images\/\'\)\] {
+  background-image: url('/images/');
+}
+.bg-\[url\(\'\/images\/sonny-1\'\)\] {
+  background-image: url('/images/sonny-1');
+}
+.bg-\[url\(\'\/images\/sonny-1\.jpg\'\)\] {
+  background-image: url('/images/sonny-1.jpg');
+}
+.bg-\[url\(\'\/images\/minimal-5\.jpg\'\)\] {
+  background-image: url('/images/minimal-5.jpg');
+}
 .bg-cover {
   background-size: cover;
+}
+.bg-bottom {
+  background-position: bottom;
+}
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 .p-5 {
   padding: 1.25rem;
@@ -608,13 +649,13 @@ video {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .py-5p {
   padding-top: 5%;
   padding-bottom: 5%;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -624,6 +665,12 @@ video {
 }
 .pl-0 {
   padding-left: 0px;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -724,6 +771,44 @@ img{
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.placeholder\:text-\[rgb\]::-moz-placeholder {
+  color: rgb;
+}
+
+.placeholder\:text-\[rgb\]::placeholder {
+  color: rgb;
+}
+
+.placeholder\:text-grey::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(234 230 222 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-grey::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(234 230 222 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-500::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-500::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-400::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-400::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .hover\:border-black:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -747,6 +832,11 @@ img{
 .hover\:bg-brown:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(94 68 50 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
@@ -782,6 +872,9 @@ img{
   }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
   .md\:pl-\[15\%\] {
     padding-left: 15%;
