--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,6 +657,10 @@ video {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -692,6 +696,10 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 1.2;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 1;
 }
 .font-light {
   font-weight: 300;
@@ -881,5 +889,12 @@ img{
   }
   .md\:pr-5p {
     padding-right: 5%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
