--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-        <title>The Sonny Co</title>
-
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-
-        
-        <link href="/assets/css/style.css" rel="stylesheet">
+{% include head.html %}
     </head>
 
     <body class="font-sans bg-grey">
