--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
 <!-- ------------icon -------------------------------------->
-<link rel="icon" href="/images/icons/circlerainbow-2.png" type="image/icon type">
+<link rel="icon" href="/images/sun-light.svg" type="image/icon type">
 
 
 <!------------ Google Fonts  ------------>
