added google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,17 @@
 <meta property="og:image" content="{{ page.seo.social_image }}">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
+<!-- google analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JQ273ECR9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JQ273ECR9');
+</script>
+
 <!-- ------------icon -------------------------------------->
 <link rel="icon" href="/images/sun-light.svg" type="image/icon type">
 
