--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,14 +436,14 @@ video {
 .mt-0 {
   margin-top: 0px;
 }
+.mb-10p {
+  margin-bottom: 10%;
+}
 .block {
   display: block;
 }
 .inline-block {
   display: inline-block;
-}
-.inline {
-  display: inline;
 }
 .flex {
   display: flex;
@@ -454,29 +454,14 @@ video {
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
-.max-h-\[70vh\] {
-  max-height: 70vh;
-}
 .max-h-\[50vh\] {
   max-height: 50vh;
-}
-.min-h-\[90vh\] {
-  min-height: 90vh;
 }
 .min-h-screen {
   min-height: 100vh;
 }
 .w-full {
   width: 100%;
-}
-.min-w-\[\] {
-  min-width: ;
-}
-.min-w-\[50vw\] {
-  min-width: 50vw;
-}
-.min-w-\[75\] {
-  min-width: 75;
 }
 .min-w-\[75vw\] {
   min-width: 75vw;
@@ -486,15 +471,6 @@ video {
 }
 .max-w-4xl {
   max-width: 56rem;
-}
-.max-w-lg {
-  max-width: 32rem;
-}
-.max-w-50 {
-  max-width: 50%;
-}
-.max-w-2xl {
-  max-width: 42rem;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -516,9 +492,6 @@ video {
 }
 .items-center {
   align-items: center;
-}
-.justify-end {
-  justify-content: flex-end;
 }
 .justify-center {
   justify-content: center;
@@ -543,6 +516,9 @@ video {
 }
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-10 {
+  gap: 2.5rem;
 }
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -570,10 +546,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
-.border-brown {
-  --tw-border-opacity: 1;
-  border-color: rgb(94 68 50 / var(--tw-border-opacity));
-}
 .border-transparent {
   border-color: transparent;
 }
@@ -592,29 +564,17 @@ video {
 .bg-inherit {
   background-color: inherit;
 }
-.bg-\[url\(\'\/assets\/images\/minimal-1\.jpg\'\)\] {
-  background-image: url('/assets/images/minimal-1.jpg');
-}
-.bg-\[url\(\'\/assets\/images\/minimal-5\.jpg\'\)\] {
-  background-image: url('/assets/images/minimal-5.jpg');
-}
-.bg-\[url\(\'\/images\/\'\)\] {
-  background-image: url('/images/');
-}
-.bg-\[url\(\'\/images\/sonny-1\'\)\] {
-  background-image: url('/images/sonny-1');
-}
 .bg-\[url\(\'\/images\/sonny-1\.jpg\'\)\] {
   background-image: url('/images/sonny-1.jpg');
 }
 .bg-\[url\(\'\/images\/minimal-5\.jpg\'\)\] {
   background-image: url('/images/minimal-5.jpg');
 }
+.bg-\[url\(\'\/images\/vh-1\.jpeg\'\)\] {
+  background-image: url('/images/vh-1.jpeg');
+}
 .bg-cover {
   background-size: cover;
-}
-.bg-bottom {
-  background-position: bottom;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -639,6 +599,10 @@ video {
 .p-3 {
   padding: 0.75rem;
 }
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
@@ -655,17 +619,24 @@ video {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .py-5p {
   padding-top: 5%;
   padding-bottom: 5%;
 }
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.px-10p {
+  padding-left: 10%;
+  padding-right: 10%;
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -673,11 +644,8 @@ video {
 .pb-5p {
   padding-bottom: 5%;
 }
-.pl-0 {
-  padding-left: 0px;
-}
-.pb-5 {
-  padding-bottom: 1.25rem;
+.pt-5p {
+  padding-top: 5%;
 }
 .text-left {
   text-align: left;
@@ -695,14 +663,6 @@ video {
   font-size: 0.875rem;;
   line-height: 1.2;
 }
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 1.2;
-}
 .text-3xl {
   font-size: 1.875rem;
   line-height: 1;
@@ -711,14 +671,21 @@ video {
   font-size: 1.25rem;
   line-height: 1.2;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 1.2;
+}
 .font-light {
   font-weight: 300;
 }
 .font-medium {
   font-weight: 500;
 }
-.font-black {
-  font-weight: 900;
+.font-bold {
+  font-weight: 700;
+}
+.font-normal {
+  font-weight: 400;
 }
 .uppercase {
   text-transform: uppercase;
@@ -733,10 +700,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-brown {
-  --tw-text-opacity: 1;
-  color: rgb(94 68 50 / var(--tw-text-opacity));
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -779,34 +742,6 @@ img{
   max-width: 100%;
 }
 
-.placeholder\:text-black::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-black::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[rgb\]::-moz-placeholder {
-  color: rgb;
-}
-
-.placeholder\:text-\[rgb\]::placeholder {
-  color: rgb;
-}
-
-.placeholder\:text-grey::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(234 230 222 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-grey::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(234 230 222 / var(--tw-text-opacity));
-}
-
 .placeholder\:text-gray-500::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -817,24 +752,9 @@ img{
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-gray-400::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray-400::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .hover\:border-black:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.hover\:border-brown:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(94 68 50 / var(--tw-border-opacity));
 }
 
 .hover\:border-b-white:hover {
@@ -845,11 +765,6 @@ img{
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-brown:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 68 50 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-black:hover {
@@ -865,6 +780,16 @@ img{
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-grey:hover {
+  --tw-text-opacity: 1;
+  color: rgb(234 230 222 / var(--tw-text-opacity));
+}
+
+.hover\:drop-shadow-3xl:hover {
+  --tw-drop-shadow: drop-shadow(0 35px 35px rgba(0, 0, 0, 0.25));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .focus\:outline-none:focus {
@@ -885,35 +810,30 @@ img{
   .md\:flex {
     display: flex;
   }
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .md\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
   .md\:pl-\[15\%\] {
     padding-left: 15%;
-  }
-  .md\:pr-5p {
-    padding-right: 5%;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:min-w-\[75vw\] {
-    min-width: 75vw;
-  }
-  .lg\:min-w-\[50\] {
-    min-width: 50;
-  }
   .lg\:min-w-\[50vw\] {
     min-width: 50vw;
   }
   .lg\:text-5xl {
     font-size: 3rem;
+    line-height: 1;
+  }
+  .lg\:text-3xl {
+    font-size: 1.875rem;
     line-height: 1;
   }
 }
