--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,6 +549,9 @@ video {
 .border-transparent {
   border-color: transparent;
 }
+.border-b-transparent {
+  border-bottom-color: transparent;
+}
 .bg-grey {
   --tw-bg-opacity: 1;
   background-color: rgb(234 230 222 / var(--tw-bg-opacity));
@@ -746,9 +749,18 @@ img{
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.hover\:border-b:hover {
+  border-bottom-width: 1px;
+}
+
 .hover\:border-black:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .hover\:border-b-white:hover {
