--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,25 +8,10 @@
 
         {{ content }}
 
-        <footer class="py-5">
-            <p class="text-center">Copyright 2023</p>
+        <footer class="pb-5">
+            <p class="text-center uppercase">Copyright 2023</p>
+            <p class="text-center uppercase">Website designed and custom coded by thesonnyco.com</p>
         </footer>
 
-        <!-- <footer class="px-5p my-5p md:flex grid grid-cols-2 gap-8 uppercase text-sm">
-            <div class="">
-                <p>Lorem Ipsum</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore ducimus dolores.</p>
-            </div>
-            <div>
-                <p>Lorem Ipsum</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolore ducimus dolores.</p>
-            </div>
-
-            <div class="shrink-0 md:pl-[15%] sm:text-right col-start-2">
-                <label for="email" class="block">Subscribe to our newsletter</label>
-                <input type="email" id="email" name="email" required class="text-black border border-black w-full mt-3">
-                <button type="submit" class="block ml-auto border text-white bg-black border-black hover:text-black hover:bg-white hover:border-black transition px-4 py-1 tracking-widest uppercase">Subscribe</button>
-            </div>
-        </footer> -->
     </body>
 </html>
