added ahrefs link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,3 +66,6 @@
 
 <!------------ CloudCannon Editor Stylesheet   ------------>
 <link rel="stylesheet" type="text/css" href="/editor.css" />
+
+<!---------------- ahrefs linking ------------------------>
+<meta name="ahrefs-site-verification" content="01e9aed3cb5c0ed00929f0f5f1bf1485e4f5fa0343c1885b027e44ce9a0995e6">
