begin to include about

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,11 +450,20 @@ video {
 .min-h-\[85vh\] {
   min-height: 85vh;
 }
+.min-h-\[25vh\] {
+  min-height: 25vh;
+}
 .w-full {
   width: 100%;
 }
 .min-w-\[75vw\] {
   min-width: 75vw;
+}
+.min-w-\[\] {
+  min-width: ;
+}
+.min-w-\[25vw\] {
+  min-width: 25vw;
 }
 .max-w-\[400px\] {
   max-width: 400px;
